# lm-expense-chatbot-pwa

./: IMPLEMENTATION_SUMMARY.md  README.md
app/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.js
app/public/: manifest.json
app/public/favicon/: site.webmanifest
app/src/app/: globals.css  layout.js  page.js  page.jsx  sw.js
app/src/app/api/lunch-money/__tests__/: categories.test.js  summary.test.js  transactions.test.js
app/src/app/api/lunch-money/categories/: route.js
app/src/app/api/lunch-money/summary/: route.js
app/src/app/api/lunch-money/transactions/: route.js
app/src/components/: ChatBox.jsx  ChatSidebar.jsx  FinancialChart.jsx  Logo.jsx  Message.jsx  TransactionsTable.jsx
app/src/components/ui/: button.jsx  chart.jsx  dropdown-menu.jsx  toast.jsx
app/src/hooks/: useChatHistory.js  useLocalStorage.js  useWebLLM.js
app/src/lib/: lunchMoney.js  lunchMoneyApi.js  system_prompt.js  tools.js  webllm.js
app/src/lib/__tests__/: lunchMoney.test.js  utils.test.js
app/src/test/: setup.js
frontend/: README.md  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: Chat.tsx  ChatInput.tsx  Graph.module.css  Graph.tsx  HeroBanner.tsx  Message.module.css  Message.tsx
poc/: .env.sample  README.md  bootstrap.ps1  pyproject.toml
poc/archive/: mcp_client.py  server.py
poc/src/: app.py  lm.py  lunchmoney.py  prompts.py  tools.py
src/: App.tsx
src/components/: Chat.module.css  Chat.tsx  ChatInput.module.css  HeroBanner.module.css  Message.module.css
(+6 files in other folders)
