[project]
name = "poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Shee",email = "tim.shee0791@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "my-application" # Optional, but good practice for clarity
version = "0.1.0"       # Optional, but good practice for clarity
description = "My Python application" # Optional


[tool.poetry.dependencies]
python = ">=3.12"
# Add your dependencies here, e.g.:
# requests = "^2.28.1"
# rich = "^12.0.0"
mcp = "^1.16.0"
streamlit = "^1.50.0"
python-dotenv = "^1.1.1"
requests = "^2.32.5"
pydantic = "^2.12.0"
ollama = "^0.6.0"
